edit-problem-statement

--- a/AI_Phase5.ipynb
+++ b/AI_Phase5.ipynb
@@ -17,6 +17,8 @@
     "\n",
     "Several natural risks including fire, tsunami, flood, earthquake, etc., are hurting persons, buildings, animals, and other infrastructures. These dangers can not be halted but can be averted utilising numerous approaches as remote sensign, LiDAR, and seismic stations. One of the purposes of earthquake hazard analysis is to reduce the effect of earthquakes on civilization by limiting damage to buildings and infrastructure. Predicting seismic occurrences using continuous data and applying it in real-time to early warning systems or evaluating it offline to hunt for previously unpredicted earthquakes is an essential problem.\n",
     "\n",
+    "So we have developed a data model to predict the areas with the highest risk of being affected by an earthquake using ensemble learning with the Random Forest and a general Neural Network algorithms.\n",
+    "\n",
     "# Development Process\n",
     "\n",
     "First, we analyse the needs according to the problem statement and realize that there is a need for a deep learning based model that can predict risk zones that are most likely to be affected by an earthquake. Then we gather the neccessary dataset that can provide us data on where earthquakes have hit in the past (1965-2016). We preprocess this dataset to suit the needs of the data model to be developed. We then split the dataset into training and test data groups. We then develop the data model based on two algorithms: Random Forest and Neural Network. Through the ensemble learning method, we choose the better algorithm of the two and save the data model created by the algorithm.\n",
